syntax = "proto3";

// Note: largely inspired by
// https://github.com/prysmaticlabs/prysm/tree/develop/proto/eth/v1

package xatu.eth.v1;

option go_package = "github.com/ethpandaops/xatu/pkg/proto/eth/v1";

import "google/protobuf/wrappers.proto";
import "google/protobuf/descriptor.proto";
import "pkg/proto/eth/v1/attestation.proto";

message BeaconBlock {
  uint64 slot = 1 [ deprecated=true ];

  uint64 proposer_index = 2 [ json_name = "proposer_index", deprecated=true ];

  string parent_root = 3 [ json_name = "parent_root" ];

  string state_root = 4 [ json_name = "state_root" ];

  BeaconBlockBody body = 5;

  google.protobuf.UInt64Value slot_v2 = 6 [ json_name = "slot_v2" ];

  google.protobuf.UInt64Value proposer_index_v2 = 7 [ json_name = "proposer_index_v2" ];
}

message SignedBeaconBlock {
  BeaconBlock block = 1;

  string signature = 2;
}

message BeaconBlockBody {
  string randao_reveal = 1 [ json_name = "randao_reveal" ];

  Eth1Data eth1_data = 2 [ json_name = "eth1_data" ];

  string graffiti = 3;

  repeated ProposerSlashing proposer_slashings = 4
      [ json_name = "proposer_slashings" ];

  repeated AttesterSlashing attester_slashings = 5
      [ json_name = "attester_slashings" ];

  repeated Attestation attestations = 6;

  repeated Deposit deposits = 7;

  repeated SignedVoluntaryExit voluntary_exits = 8
      [ json_name = "voluntary_exits" ];
}

message ProposerSlashing {
  SignedBeaconBlockHeader signed_header_1 = 1 [ json_name = "signed_header_1" ];

  SignedBeaconBlockHeader signed_header_2 = 2 [ json_name = "signed_header_2" ];
}

message AttesterSlashing {
  IndexedAttestation attestation_1 = 1 [ json_name = "attestation_1" ];

  IndexedAttestation attestation_2 = 2 [ json_name = "attestation_2" ];
}

message Deposit {
  message Data {
    string pubkey = 1;

    string withdrawal_credentials = 2 [ json_name = "withdrawal_credentials" ];

    uint64 amount = 3;

    string signature = 4;
  }

  repeated string proof = 1;

  Data data = 2;
}

message VoluntaryExit {
  uint64 epoch = 1;

  uint64 validator_index = 2 [ json_name = "validator_index" ];
}

message SignedVoluntaryExit {
  VoluntaryExit message = 1;

  string signature = 2;
}

message Eth1Data {
  string deposit_root = 1 [ json_name = "deposit_root" ];

  uint64 deposit_count = 2;

  string block_hash = 3 [ json_name = "block_hash" ];
}

message BeaconBlockHeader {
  uint64 slot = 1;

  uint64 proposer_index = 2 [ json_name = "block_hash" ];

  string parent_root = 3 [ json_name = "parent_root" ];

  string state_root = 4 [ json_name = "state_root" ];

  string body_root = 5 [ json_name = "body_root" ];
}

message SignedBeaconBlockHeader {
  BeaconBlockHeader message = 1;

  string signature = 2;
}

message IndexedAttestation {
  repeated uint64 attesting_indices = 1 [ json_name = "attesting_indices" ];

  AttestationData data = 2;

  string signature = 3;
}

message SyncAggregate {
  string sync_committee_bits = 1 [ json_name = "sync_committee_bits" ];

  string sync_committee_signature = 2
      [ json_name = "sync_committee_signature" ];
}
